@@ -35,7 +35,6 @@ import java.util.Map.Entry;
 
 import org.junit.Before;
 import org.junit.Test;
-import org.sosy_lab.common.Pair;
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
 import org.sosy_lab.common.io.Files;
@@ -49,6 +48,7 @@ import org.sosy_lab.cpachecker.cfa.model.c.CLabelNode;
 import org.sosy_lab.cpachecker.exceptions.CPAException;
 import org.sosy_lab.cpachecker.exceptions.ParserException;
 import org.sosy_lab.cpachecker.util.CFAUtils;
+import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.globalinfo.CFAInfo;
 import org.sosy_lab.cpachecker.util.globalinfo.GlobalInfo;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.SSAMap;
@@ -104,8 +104,11 @@ public class AppliedCustomInstructionParserTest {
             + "test2(4);"
           + "}";
     cfa = TestDataTools.makeCFA(testProgram);
-    aciParser = new AppliedCustomInstructionParser(ShutdownNotifier.create(),
-        new BasicLogManager(TestDataTools.configurationForTest().build()), cfa);
+    aciParser =
+        new AppliedCustomInstructionParser(
+            ShutdownNotifier.createDummy(),
+            new BasicLogManager(TestDataTools.configurationForTest().build()),
+            cfa);
     GlobalInfo.getInstance().storeCFA(cfa);
     cfaInfo = GlobalInfo.getInstance().getCFAInfo().get();
     labelNodes = getLabelNodes(cfa);
@@ -166,7 +169,6 @@ public class AppliedCustomInstructionParserTest {
     }
     Truth.assertThat(ci.getStartNode()).isEqualTo(expectedStart);
     Truth.assertThat(ci.getEndNodes()).containsExactlyElementsIn(expectedEnds);
-    // input variables: ci::globalVar, ci::u, ci::var, ci::y, ci::z
     List<String> list = new ArrayList<>();
     list.add("ci::globalVar");
     list.add("ci::u");
@@ -174,7 +176,6 @@ public class AppliedCustomInstructionParserTest {
     list.add("ci::y");
     list.add("ci::z");
     Truth.assertThat(ci.getInputVariables()).containsExactlyElementsIn(list).inOrder();
-     //output variables: ci::var, ci::y, ci::z
     list = new ArrayList<>();
     list.add("ci::var");
     list.add("ci::y");
@@ -196,13 +197,11 @@ public class AppliedCustomInstructionParserTest {
     }
     Truth.assertThat(ci.getStartNode()).isEqualTo(expectedStart);
     Truth.assertThat(ci.getEndNodes()).containsExactlyElementsIn(expectedEnds);
-    // input variables: main::m, main::n, main::o
     list = new ArrayList<>();
     list.add("main::m");
     list.add("main::n");
     list.add("main::o");
      Truth.assertThat(ci.getInputVariables()).containsExactlyElementsIn(list).inOrder();
-    // output variables:  main::n
     list = new ArrayList<>();
     list.add("main::n");
     Truth.assertThat(ci.getOutputVariables()).containsExactlyElementsIn(list).inOrder();
@@ -233,26 +232,29 @@ public class AppliedCustomInstructionParserTest {
 
     CFA cfa = TestDataTools.makeCFA(testProgram);
     GlobalInfo.getInstance().storeCFA(cfa);
-    aciParser = new AppliedCustomInstructionParser(ShutdownNotifier.create(), new BasicLogManager(TestDataTools
-            .configurationForTest().build()), cfa);
+    aciParser =
+        new AppliedCustomInstructionParser(
+            ShutdownNotifier.createDummy(),
+            new BasicLogManager(TestDataTools.configurationForTest().build()),
+            cfa);
     Path p = Paths.createTempPath("test_acis", null);
-    Writer file = Files.openOutputFile(p);
-    file.append("main\n");
-    CFANode node;
-    Deque<CFANode> toVisit = new ArrayDeque<>();
-    toVisit.add(cfa.getMainFunction());
-    while(!toVisit.isEmpty()) {
-      node = toVisit.pop();
+    try (Writer file = Files.openOutputFile(p)) {
+      file.append("main\n");
+      CFANode node;
+      Deque<CFANode> toVisit = new ArrayDeque<>();
+      toVisit.add(cfa.getMainFunction());
+      while (!toVisit.isEmpty()) {
+        node = toVisit.pop();
 
-      for(CFANode succ: CFAUtils.allSuccessorsOf(node)) {
-        toVisit.add(succ);
-        if(node.getEdgeTo(succ).getEdgeType().equals(CFAEdgeType.StatementEdge)) {
-          file.append(node.getNodeNumber()+"\n");
+        for (CFANode succ : CFAUtils.allSuccessorsOf(node)) {
+          toVisit.add(succ);
+          if (node.getEdgeTo(succ).getEdgeType().equals(CFAEdgeType.StatementEdge)) {
+            file.append(node.getNodeNumber() + "\n");
+          }
         }
       }
+      file.flush();
     }
-    file.flush();
-    file.close();
 
     CFANode expectedStart = null;
     for(CLabelNode n: getLabelNodes(cfa)){
@@ -268,6 +270,8 @@ public class AppliedCustomInstructionParserTest {
     List<CFANode> aciNodes = new ArrayList<>(2);
 
     for (Entry<CFANode, AppliedCustomInstruction> entry : cis.entrySet()) {
+      Collection<String> inputVars = new ArrayList<>();
+      Collection<String> outputVars = new ArrayList<>();
       Pair<List<String>, String> fakeSMTDescription;
       List<String> list = new ArrayList<>();
       List<String> variables = new ArrayList<>();
@@ -277,67 +281,91 @@ public class AppliedCustomInstructionParserTest {
       aciNodes.add(entry.getKey().getLeavingEdge(0).getSuccessor());
 
       if (entry.getKey().getNodeNumber() == startNodeNr) {
-          fakeSMTDescription = entry.getValue().getFakeSMTDescription();
-          list.add("(declare-fun |main::x| () Int)");
-          list.add("(declare-fun |main::y| () Int)");
-          list.add("(declare-fun |main::x@1| () Int)");
-          Truth.assertThat(fakeSMTDescription.getFirst()).containsExactlyElementsIn(list);
-          Truth.assertThat(fakeSMTDescription.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |main::x| 0)(and (= |main::y| 0) (= |main::x@1| 0))))");
+        inputVars.add("main::x");
+        inputVars.add("main::y");
+        Truth.assertThat(entry.getValue().getInputVariables()).containsExactlyElementsIn(inputVars);
+        outputVars.add("main::x");
+        Truth.assertThat(entry.getValue().getOutputVariables()).containsExactlyElementsIn(outputVars);
 
-          ssaMap = entry.getValue().getIndicesForReturnVars();
-          variables.add("main::x");
-          Truth.assertThat(ssaMap.allVariables()).containsExactlyElementsIn(variables);
-          Truth.assertThat(ssaMap.getIndex(variables.get(0))).isEqualTo(1);
+        fakeSMTDescription = entry.getValue().getFakeSMTDescription();
+        list.add("(declare-fun |main::x| () Int)");
+        list.add("(declare-fun |main::y| () Int)");
+        list.add("(declare-fun |main::x@1| () Int)");
+        Truth.assertThat(fakeSMTDescription.getFirst()).containsExactlyElementsIn(list);
+        Truth.assertThat(fakeSMTDescription.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |main::x| 0)(and (= |main::y| 0) (= |main::x@1| 0))))");
 
-          Truth.assertThat(entry.getValue().getStartAndEndNodes()).containsExactlyElementsIn(aciNodes);
+        ssaMap = entry.getValue().getIndicesForReturnVars();
+        variables.add("main::x");
+        Truth.assertThat(ssaMap.allVariables()).containsExactlyElementsIn(variables);
+        Truth.assertThat(ssaMap.getIndex(variables.get(0))).isEqualTo(1);
+
+        Truth.assertThat(entry.getValue().getStartAndEndNodes()).containsExactlyElementsIn(aciNodes);
 
       } else if (entry.getKey().getNodeNumber() == startNodeNr + 2) {
-          fakeSMTDescription = entry.getValue().getFakeSMTDescription();
-          list.clear();
-          list.add("(declare-fun |main::x| () Int)");
-          list.add("(declare-fun |main::x| () Int)");
-          list.add("(declare-fun |main::x@1| () Int)");
-          Truth.assertThat(fakeSMTDescription.getFirst()).containsExactlyElementsIn(list);
-          Truth.assertThat(fakeSMTDescription.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |main::x| 0)(and (= |main::x| 0) (= |main::x@1| 0))))");
+        inputVars.add("main::x");
+        inputVars.add("main::x");
+        Truth.assertThat(entry.getValue().getInputVariables()).containsExactlyElementsIn(inputVars);
+        outputVars.add("main::x");
+        Truth.assertThat(entry.getValue().getOutputVariables()).containsExactlyElementsIn(outputVars);
 
-          ssaMap = entry.getValue().getIndicesForReturnVars();
-          variables.add("main::x");
-          Truth.assertThat(ssaMap.allVariables()).containsExactlyElementsIn(variables);
-          Truth.assertThat(ssaMap.getIndex(variables.get(0))).isEqualTo(1);
+        fakeSMTDescription = entry.getValue().getFakeSMTDescription();
+        list.clear();
+        list.add("(declare-fun |main::x| () Int)");
+        list.add("(declare-fun |main::x| () Int)");
+        list.add("(declare-fun |main::x@1| () Int)");
+        Truth.assertThat(fakeSMTDescription.getFirst()).containsExactlyElementsIn(list);
+        Truth.assertThat(fakeSMTDescription.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |main::x| 0)(and (= |main::x| 0) (= |main::x@1| 0))))");
 
-          Truth.assertThat(entry.getValue().getStartAndEndNodes()).containsExactlyElementsIn(aciNodes);
+        ssaMap = entry.getValue().getIndicesForReturnVars();
+        variables.add("main::x");
+        Truth.assertThat(ssaMap.allVariables()).containsExactlyElementsIn(variables);
+        Truth.assertThat(ssaMap.getIndex(variables.get(0))).isEqualTo(1);
 
-        } else if (entry.getKey().getNodeNumber() == startNodeNr + 3) {
-          fakeSMTDescription = entry.getValue().getFakeSMTDescription();
-          list.clear();
-          list.add("(declare-fun |main::y| () Int)");
-          list.add("(declare-fun |main::y| () Int)");
-          list.add("(declare-fun |main::y@1| () Int)");
-          Truth.assertThat(fakeSMTDescription.getFirst()).containsExactlyElementsIn(list);
-          Truth.assertThat(fakeSMTDescription.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |main::y| 0)(and (= |main::y| 0) (= |main::y@1| 0))))");
+        Truth.assertThat(entry.getValue().getStartAndEndNodes()).containsExactlyElementsIn(aciNodes);
 
-          ssaMap = entry.getValue().getIndicesForReturnVars();
-          variables.add("main::y");
-          Truth.assertThat(ssaMap.allVariables()).containsExactlyElementsIn(variables);
-          Truth.assertThat(ssaMap.getIndex(variables.get(0))).isEqualTo(1);
+      } else if (entry.getKey().getNodeNumber() == startNodeNr + 3) {
+        inputVars.add("main::y");
+        inputVars.add("main::y");
+        Truth.assertThat(entry.getValue().getInputVariables()).containsExactlyElementsIn(inputVars);
+        outputVars.add("main::y");
+        Truth.assertThat(entry.getValue().getOutputVariables()).containsExactlyElementsIn(outputVars);
 
-          Truth.assertThat(entry.getValue().getStartAndEndNodes()).containsExactlyElementsIn(aciNodes);
+        fakeSMTDescription = entry.getValue().getFakeSMTDescription();
+        list.clear();
+        list.add("(declare-fun |main::y| () Int)");
+        list.add("(declare-fun |main::y| () Int)");
+        list.add("(declare-fun |main::y@1| () Int)");
+        Truth.assertThat(fakeSMTDescription.getFirst()).containsExactlyElementsIn(list);
+        Truth.assertThat(fakeSMTDescription.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |main::y| 0)(and (= |main::y| 0) (= |main::y@1| 0))))");
 
-        } else if (entry.getKey().getNodeNumber() == startNodeNr + 4) {
-          fakeSMTDescription = entry.getValue().getFakeSMTDescription();
-          list.clear();
-          list.add("(declare-fun |main::y| () Int)");
-          list.add("(declare-fun |main::x| () Int)");
-          list.add("(declare-fun |main::y@1| () Int)");
-          Truth.assertThat(fakeSMTDescription.getFirst()).containsExactlyElementsIn(list);
-          Truth.assertThat(fakeSMTDescription.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |main::y| 0)(and (= |main::x| 0) (= |main::y@1| 0))))");
+        ssaMap = entry.getValue().getIndicesForReturnVars();
+        variables.add("main::y");
+        Truth.assertThat(ssaMap.allVariables()).containsExactlyElementsIn(variables);
+        Truth.assertThat(ssaMap.getIndex(variables.get(0))).isEqualTo(1);
 
-          ssaMap = entry.getValue().getIndicesForReturnVars();
-          variables.add("main::y");
-          Truth.assertThat(ssaMap.allVariables()).containsExactlyElementsIn(variables);
-          Truth.assertThat(ssaMap.getIndex(variables.get(0))).isEqualTo(1);
+        Truth.assertThat(entry.getValue().getStartAndEndNodes()).containsExactlyElementsIn(aciNodes);
 
-          Truth.assertThat(entry.getValue().getStartAndEndNodes()).containsExactlyElementsIn(aciNodes);
+      } else if (entry.getKey().getNodeNumber() == startNodeNr + 4) {
+        inputVars.add("main::y");
+        inputVars.add("main::x");
+        Truth.assertThat(entry.getValue().getInputVariables()).containsExactlyElementsIn(inputVars);
+        outputVars.add("main::y");
+        Truth.assertThat(entry.getValue().getOutputVariables()).containsExactlyElementsIn(outputVars);
+
+        fakeSMTDescription = entry.getValue().getFakeSMTDescription();
+        list.clear();
+        list.add("(declare-fun |main::y| () Int)");
+        list.add("(declare-fun |main::x| () Int)");
+        list.add("(declare-fun |main::y@1| () Int)");
+        Truth.assertThat(fakeSMTDescription.getFirst()).containsExactlyElementsIn(list);
+        Truth.assertThat(fakeSMTDescription.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |main::y| 0)(and (= |main::x| 0) (= |main::y@1| 0))))");
+
+        ssaMap = entry.getValue().getIndicesForReturnVars();
+        variables.add("main::y");
+        Truth.assertThat(ssaMap.allVariables()).containsExactlyElementsIn(variables);
+        Truth.assertThat(ssaMap.getIndex(variables.get(0))).isEqualTo(1);
+
+        Truth.assertThat(entry.getValue().getStartAndEndNodes()).containsExactlyElementsIn(aciNodes);
 
         } else {
           Truth.assertThat(false).isTrue();
