@@ -39,7 +39,6 @@ import java.util.Set;
 
 import org.junit.Before;
 import org.junit.Test;
-import org.sosy_lab.common.Pair;
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.cpachecker.cfa.CFA;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
@@ -52,6 +51,7 @@ import org.sosy_lab.cpachecker.cpa.location.LocationState;
 import org.sosy_lab.cpachecker.exceptions.CPAException;
 import org.sosy_lab.cpachecker.exceptions.ParserException;
 import org.sosy_lab.cpachecker.util.CFAUtils;
+import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.SSAMap;
 import org.sosy_lab.cpachecker.util.test.TestDataTools;
 
@@ -93,10 +93,11 @@ public class CustomInstructionTest {
     input.add("a");
     List<String> output = new ArrayList<>();
     output.add("b");
-    ci = new CustomInstruction(startNode, endNodes, input, output, ShutdownNotifier.create());
+    ci = new CustomInstruction(startNode, endNodes, input, output, ShutdownNotifier.createDummy());
 
     cis = new HashMap<>();
     aci = new AppliedCustomInstruction(startNode, endNodes,
+        Collections.<String>emptyList(), Collections.<String>emptyList(), Collections.<String>emptyList(),
         Pair.of(Collections.<String> emptyList(), ""),
         SSAMap.emptySSAMap());
 
@@ -176,77 +177,97 @@ public class CustomInstructionTest {
 
   @Test
   public void testGetSignature() {
-    ci = new CustomInstruction(null, null, Collections.<String> emptyList(), Collections.<String> emptyList(), ShutdownNotifier.create());
+    ci =
+        new CustomInstruction(
+            null,
+            null,
+            Collections.<String>emptyList(),
+            Collections.<String>emptyList(),
+            ShutdownNotifier.createDummy());
     Truth.assertThat(ci.getSignature()).isEqualTo("() -> ()");
 
     List<String> inputVars = new ArrayList<>();
     inputVars.add("var");
     List<String> outputVars = new ArrayList<>();
     outputVars.add("var0");
-    ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
-    Truth.assertThat(ci.getSignature()).isEqualTo("(|var|) -> (|var0@1|)");
+    ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.createDummy());
+    Truth.assertThat(ci.getSignature()).isEqualTo("(var) -> (var0@1)");
 
     inputVars = new ArrayList<>();
-    inputVars.add("var1");
+    inputVars.add("f::var1");
     inputVars.add("var2");
     outputVars = new ArrayList<>();
     outputVars.add("var3");
-    outputVars.add("var4");
+    outputVars.add("f::var4");
     outputVars.add("var5");
-    ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
-    Truth.assertThat(ci.getSignature()).isEqualTo("(|var1|, |var2|) -> (|var3@1|, |var4@1|, |var5@1|)");
+    ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.createDummy());
+    Truth.assertThat(ci.getSignature()).isEqualTo("(|f::var1|, var2) -> (var3@1, |f::var4@1|, var5@1)");
   }
 
   @Test
   public void testGetFakeSMTDescription() {
-    ci = new CustomInstruction(null, null, Collections.<String> emptyList(), Collections.<String> emptyList(), ShutdownNotifier.create());
+    ci =
+        new CustomInstruction(
+            null,
+            null,
+            Collections.<String>emptyList(),
+            Collections.<String>emptyList(),
+            ShutdownNotifier.createDummy());
     Pair<List<String>, String> pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).isEmpty();
     Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool true)");
 
     List<String> inputVars = new ArrayList<>();
     inputVars.add("var");
-    ci = new CustomInstruction(null, null, inputVars, Collections.<String> emptyList(), ShutdownNotifier.create());
+    ci =
+        new CustomInstruction(
+            null, null, inputVars, Collections.<String>emptyList(), ShutdownNotifier.createDummy());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(1);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun |var| () Int)");
-    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(= |var| 0))");
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var () Int)");
+    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(= var 0))");
 
     List<String> outputVars = new ArrayList<>();
     outputVars.add("var1");
-    ci = new CustomInstruction(null, null, Collections.<String> emptyList(), outputVars, ShutdownNotifier.create());
+    ci =
+        new CustomInstruction(
+            null,
+            null,
+            Collections.<String>emptyList(),
+            outputVars,
+            ShutdownNotifier.createDummy());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(1);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun |var1@1| () Int)");
-    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool (= |var1@1| 0))");
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var1@1 () Int)");
+    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool (= var1@1 0))");
 
     inputVars = new ArrayList<>();
     inputVars.add("var1");
     outputVars = new ArrayList<>();
     outputVars.add("var2");
-    ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
+    ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.createDummy());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(2);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun |var1| () Int)");
-    Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun |var2@1| () Int)");
-    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |var1| 0) (= |var2@1| 0)))");
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var1 () Int)");
+    Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun var2@1 () Int)");
+    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= var1 0) (= var2@1 0)))");
 
     inputVars = new ArrayList<>();
     inputVars.add("var");
-    inputVars.add("var1");
+    inputVars.add("f::var1");
     inputVars.add("var2");
     outputVars = new ArrayList<>();
     outputVars.add("var3");
-    outputVars.add("var4");
-    ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.create());
+    outputVars.add("f::var4");
+    ci = new CustomInstruction(null, null, inputVars, outputVars, ShutdownNotifier.createDummy());
     pair = ci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(5);
-    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun |var| () Int)");
-    Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun |var1| () Int)");
-    Truth.assertThat(pair.getFirst().get(2)).isEqualTo("(declare-fun |var2| () Int)");
-    Truth.assertThat(pair.getFirst().get(3)).isEqualTo("(declare-fun |var3@1| () Int)");
-    Truth.assertThat(pair.getFirst().get(4)).isEqualTo("(declare-fun |var4@1| () Int)");
-    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= |var| 0)(and (= |var1| 0)(and (= |var2| 0)(and (= |var3@1| 0) (= |var4@1| 0))))))");
+    Truth.assertThat(pair.getFirst().get(0)).isEqualTo("(declare-fun var () Int)");
+    Truth.assertThat(pair.getFirst().get(1)).isEqualTo("(declare-fun |f::var1| () Int)");
+    Truth.assertThat(pair.getFirst().get(2)).isEqualTo("(declare-fun var2 () Int)");
+    Truth.assertThat(pair.getFirst().get(3)).isEqualTo("(declare-fun var3@1 () Int)");
+    Truth.assertThat(pair.getFirst().get(4)).isEqualTo("(declare-fun |f::var4@1| () Int)");
+    Truth.assertThat(pair.getSecond()).isEqualTo("(define-fun ci() Bool(and (= var 0)(and (= |f::var1| 0)(and (= var2 0)(and (= var3@1 0) (= |f::var4@1| 0))))))");
   }
 
   @Test
@@ -327,9 +348,17 @@ public class CustomInstructionTest {
     List<String> output = new ArrayList<>();
     output.add("main::x");
     output.add("main::z");
-    ci = new CustomInstruction(startNode, endNodes, input, output, ShutdownNotifier.create());
+    ci = new CustomInstruction(startNode, endNodes, input, output, ShutdownNotifier.createDummy());
 
     aci = ci.inspectAppliedCustomInstruction(aciStartNode);
+
+    Collection<String> inputVars = new ArrayList<>();
+    inputVars.add("main::b");
+    Truth.assertThat(aci.getInputVariables()).containsExactlyElementsIn(inputVars);
+    Collection<String> outputVars = new ArrayList<>();
+    outputVars.add("main::a");
+    outputVars.add("main::b");
+    Truth.assertThat(aci.getOutputVariables()).containsExactlyElementsIn(outputVars);
 
     Pair<List<String>, String> pair = aci.getFakeSMTDescription();
     Truth.assertThat(pair.getFirst()).hasSize(3);
@@ -350,5 +379,39 @@ public class CustomInstructionTest {
     aciNodes.add(aciStartNode);
     aciNodes.add(aciEndNode);
     Truth.assertThat(aci.getStartAndEndNodes()).containsExactlyElementsIn(aciNodes);
+  }
+
+  @Test
+  public void testGetInputVariables() throws IOException, ParserException, InterruptedException, NoSuchMethodException, SecurityException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
+    Truth.assertThat(aci.getInputVariables()).isEmpty();
+
+    List<String> inputVariables = new ArrayList<>(1);
+    inputVariables.add("main::a");
+    aci = new AppliedCustomInstruction(startNode, endNodes, inputVariables, Collections.<String>emptyList(), inputVariables,
+        Pair.of(Collections.<String> emptyList(), ""), SSAMap.emptySSAMap());
+    Truth.assertThat(aci.getInputVariables()).containsExactly("main::a");
+  }
+
+  @Test
+  public void testGetOutputVariables() {
+    Truth.assertThat(aci.getOutputVariables()).isEmpty();
+
+    List<String> outputVariables = new ArrayList<>(1);
+    outputVariables.add("main::a");
+    aci = new AppliedCustomInstruction(startNode, endNodes, Collections.<String>emptyList(),  outputVariables, Collections.<String>emptyList(),
+        Pair.of(Collections.<String> emptyList(), ""), SSAMap.emptySSAMap());
+    Truth.assertThat(aci.getOutputVariables()).containsExactly("main::a");
+  }
+
+  @Test
+  public void testGetInputVariablesAndConstants() {
+    Truth.assertThat(aci.getOutputVariables()).isEmpty();
+
+    List<String> inputVarsAndConstants = new ArrayList<>(2);
+    inputVarsAndConstants.add("main::a");
+    inputVarsAndConstants.add("1");
+    aci = new AppliedCustomInstruction(startNode, endNodes,  Collections.singletonList("main::a"), Collections.<String>emptyList(),
+        inputVarsAndConstants, Pair.of(Collections.<String> emptyList(), ""), SSAMap.emptySSAMap());
+    Truth.assertThat(aci.getInputVariablesAndConstants()).containsExactlyElementsIn(inputVarsAndConstants).inOrder();
   }
 }
